Add filters to vendors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
 
-    <string name="feet_away">feet away</string>
+    <string name="metre">m</string>
 
     <string name="search">Search</string>
 
@@ -70,4 +70,5 @@
     <string name="uploading">Uploading ...</string>
     <string name="creating_account">Creating you account ...</string>
     <string name="no_vendors_yet">No vendors around you yet</string>
+    <string name="done">Done</string>
 </resources>
