--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,6 @@
     <string name="charge">Charge</string>
 
     <string name="charged_succesfully">Charged Successfully</string>
+    <string name="transactions">transactions</string>
+    <string name="no_transactions_yet">No transactions yet</string>
 </resources>
